# secretary

./: Cargo.toml  README.md  prompt.md
src/: lib.rs  main.rs  secretary.rs
src/auth/: auth.rs
src/config/: config.rs
src/dropbox/: dropbox.rs  mod.rs
src/models/: audio_note.rs  dropbox_file_metadata.rs  mod.rs
src/openai/: gpt.rs
src/utils/: file_utils.rs
src/whisper/: whisper.rs
