[package]
name = "secretary2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
chrono = "0.4.38"
dotenv = "0.15.0"
dropbox-sdk = "0.18.1"
env_logger = "0.11.3"
itertools = "0.12.1"
json = "0.12.4"
log = "0.4.21"
markdown = "0.3.0"
mockall = "0.12.1"
openai-api = "0.1.4"
pathbuf = "1.0.0"
predicates-tree = "1.0.9"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
serde = "1.0.200"
serde_json = "1.0.116"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
uuid = "1.8.0"
whisper-rs = "0.11.1"
